#164: created initial user guide with just a cleaned up version of the installation document.